--- a/index.html
+++ b/index.html
@@ -122,24 +122,29 @@
         </div>
 
         <p class="name-title__desc">
-          Aqui tu desarrollador y analista de confianza. Aquí encontrarás
+          Soy tu desarrollador y analista de confianza. Aquí podrás encontrar
           ejemplos de mi trabajo en el mundo del desarrollo. ¡Explora y siéntete
-          libre de contactarme para colaborar en proyectos futuros!
+          libre de contactarme para colaborar en proyectos futuros! Estoy
+          comprometido a mejorar continuamente y ofrecerte soluciones de alta
+          calidad para tus necesidades de desarrollo. ¡Espero poder trabajar
+          juntos pronto!
         </p>
+        
         <a class="about-me" href="about_me.html">
-            Ver más sobre mi
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-              fill="currentColor"
-            >
-              <path
-                d="M19.1642 12L12.9571 5.79291L11.5429 7.20712L16.3358 12L11.5429 16.7929L12.9571 18.2071L19.1642 12ZM13.5143 12L7.30722 5.79291L5.89301 7.20712L10.6859 12L5.89301 16.7929L7.30722 18.2071L13.5143 12Z"
-              ></path>
-            </svg>
+          Ver más sobre mi
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="currentColor"
+          >
+            <path
+              d="M19.1642 12L12.9571 5.79291L11.5429 7.20712L16.3358 12L11.5429 16.7929L12.9571 18.2071L19.1642 12ZM13.5143 12L7.30722 5.79291L5.89301 7.20712L10.6859 12L5.89301 16.7929L7.30722 18.2071L13.5143 12Z"
+            ></path>
+          </svg>
         </a>
       </section>
     </main>
+
     <footer>
       <!-- ICONO WPP  -->
       <a href="https://wa.me/573017926168" target="_blank">
