ABOUT ME avances

--- a/index.html
+++ b/index.html
@@ -116,7 +116,11 @@
     <main>
       <section class="info">
         <div class="typewriter">
-          <h1 class="name-title">SOY</h1>
+
+          <h1 class="name-title">
+            SOY
+          </h1>
+
           <div class="content-text-animation"></div>
           <div class="writing-bar"></div>
         </div>
