--- a/about_me.html
+++ b/about_me.html
@@ -208,7 +208,14 @@
             >
               VER CERTIFICADO.
             </a>
+
           </div>
+        </div>
+
+        <div class="skills">  
+          <h2 class="skills-title"> 
+            Mis Habilidades </h2>
+            
         </div>
 
       </section>
