Co-authored-by: daezen <daezen@users.noreply.github.com>

--- a/about_me.html
+++ b/about_me.html
@@ -212,9 +212,9 @@
           </div>
         </div>
 
-        <div class="skills">  
-          <h2 class="skills-title"> 
-            Mis Habilidades </h2>
+        <div class="Course">  
+          <h2 class="Course-title"> 
+            Mis Cursos </h2>
             
         </div>
 
