--- a/cv.html
+++ b/cv.html
@@ -111,13 +111,12 @@
         </li>
       </ul>
     </nav>
-    <header class="header">
+    <header >
         <h1>MI HOJA DE VIDA</h1>
-        <h2>PAGUENMEE PLS XD</h2>
 
     </header>
     <main>
-    
+      <embed src="PDF/HVJUANMANUELMORALESGONZALEZ.pdf" type="application/pdf">
     </main>
 
     <footer>
