--- a/about_me.html
+++ b/about_me.html
@@ -129,13 +129,6 @@
               Universitario Pascual Bravo en 2023. Actualmente, estoy cursando
               el séptimo semestre de Ingeniería en Desarrollo de Software.
             </p>
-            <a
-              class="diploma-tecnologia"
-              href="PDF/DIPLOMA TECNOLOGIA.pdf"
-              target="_blank"
-            >
-              VER DIPLOMA.
-            </a>
           </div>
           <a href="https://pascualbravo.edu.co/" target="_blank">
             <img src="img/LOGOPASCUALBLANCO.png" alt="LOGO PASCUAL BRAVO" />
@@ -201,22 +194,29 @@
               Python con énfasis en Pandas, Data Azure Factory, y trabajé en el
               entorno de Power Platform, incluyendo Power Automate y Power Apps.
             </p>
-            <a
-              class="certificado-personalsof"
-              href="PDF/CertificadoTrabajoPersonalsoft.pdf"
-              target="_blank"
-            >
-              VER CERTIFICADO.
-            </a>
 
           </div>
         </div>
 
-        <div class="Course">  
-          <h2 class="Course-title"> 
+                      <!-- CURSOS -->
+
+        <div class="courses">  
+          <h2 class="courses-title"> 
             Mis Cursos </h2>
+
+            <div class="img-curso1">
+              <a href="https://www.hackerrank.com/certificates/06b1407b0fff" target="_blank">
+                <img src="img/CertificadoSQLBasic.png" alt="CertificadoSQLBasic"> 
+              </a>
+            </div>
             
+            <div class="img-curso2">
+              <a href="https://www.hackerrank.com/certificates/06b1407b0fff" target="_blank">
+                <img src="img/mi bebe.jpg" alt="CertificadoSQLBasic"> 
+              </a>
+            </div>
         </div>
+
 
       </section>
     </main>
