--- a/projects.html
+++ b/projects.html
@@ -192,7 +192,7 @@
             <div class="card">
 
               <div class="image">
-                <img src="" alt="imagen proyecto 4">
+                <img src="img/moraditojpg.jpg" alt="imagen proyecto 4">
               </div>
               <div class="infos">
                 <span class="name"> App 4</span>
@@ -211,7 +211,7 @@
             <div class="card">
 
               <div class="image">
-                <img src="" alt="imagen proyecto 5">
+                <img src="img/kokax.jpg" alt="imagen proyecto 5">
               </div>
               <div class="infos">
                 <span class="name"> App 5</span>
