replace projectos to proyectos

--- a/interests.html
+++ b/interests.html
@@ -47,7 +47,7 @@
           <a href="about_me.html">Sobre mi</a>
         </li>
         <li>
-          <a href="projects.html">Projectos</a>
+          <a href="projects.html">Proyectos</a>
         </li>
         <li>
           <a href="cv.html">Hoja de vida</a>
