--- a/cv.html
+++ b/cv.html
@@ -45,7 +45,7 @@
           <a href="about_me.html">Sobre mi</a>
         </li>
         <li>
-          <a href="projects.html">Projectos</a>
+          <a href="projects.html">Proyectos</a>
         </li>
         <li>
           <a href="interests.html">Intereses</a>
