Co-authored-by: daezen <daezen@users.noreply.github.com>

--- a/about_me.html
+++ b/about_me.html
@@ -15,6 +15,7 @@
   </head>
 
   <body>
+      <!-- background -->
     <div class="area-aboutme" >
       <ul class="circles">
               <li></li>
@@ -28,7 +29,7 @@
               <li></li>
               <li></li>
       </ul>
-</div >
+    </div >
     <nav>
       <a href="index.html"
         ><svg
@@ -54,7 +55,7 @@
     </nav>
 
     <main class="about-me-main">
-      <h1 class="aboutme-title">Sobre mi.</h1>
+      <h1 class="aboutme-title">Sobre mi</h1>
 
       <section class="info-aboutme">
         <div class="estudios">
