--- a/about_me.html
+++ b/about_me.html
@@ -53,10 +53,10 @@
         </li>
       </ul>
     </nav>
-
+    <header class="header">
+      <h1>SOBRE MI</h1>
+  </header>
     <main class="about-me-main">
-      <h1 class="aboutme-title">Sobre mi</h1>
-
       <section class="info-aboutme">
         <div class="estudios">
           <div>
