deleted image innecesaries

--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,7 @@
             <div class="card">
 
               <div class="image">
-                <img src="img/mi bebe.jpg" alt="proyecto 2">
+                <img src="img/" alt="imagen proyecto 2">
     
               </div>
               <div class="infos">
@@ -110,7 +110,7 @@
             <div class="card">
 
               <div class="image">
-                <img src="img/Juanitoalimaña.png" alt="proyecto 3">
+                <img src="img/" alt="imagen proyecto 3">
 
               </div>
               <div class="infos">
@@ -131,7 +131,7 @@
             <div class="card">
 
               <div class="image">
-                <img src="img/moraditojpg.jpg" alt="imagen proyecto 4">
+                <img src="img/" alt="imagen proyecto 4">
               </div>
               <div class="infos">
                 <span class="name"> App 4</span>
@@ -150,7 +150,7 @@
             <div class="card">
 
               <div class="image">
-                <img src="img/kokax.jpg" alt="imagen proyecto 5">
+                <img src="img/" alt="imagen proyecto 5">
               </div>
               <div class="infos">
                 <span class="name"> App 5</span>
