new responsive about me

--- a/about_me.html
+++ b/about_me.html
@@ -15,21 +15,22 @@
   </head>
 
   <body>
-      <!-- background -->
-    <div class="area-aboutme" >
+    <!-- background -->
+    <div class="area-aboutme">
       <ul class="circles">
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
       </ul>
-    </div >
+    </div>
+
     <nav>
       <a href="index.html"
         ><svg
@@ -50,9 +51,13 @@
         </li>
       </ul>
     </nav>
-    <header class="header">
+
+  
+    <header class="aboutme-title">
       <h1>SOBRE MI</h1>
-  </header>
+    </header>
+
+
     <main class="about-me-main">
       <section class="info-aboutme">
         <div class="estudios">
@@ -60,14 +65,14 @@
             <h2 class="estudios-title">
               Estudios
               <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-              fill="currentColor"
-            >
-              <path
-                d="M4 11.3333L0 9L12 2L24 9V17.5H22V10.1667L20 11.3333V18.0113L19.7774 18.2864C17.9457 20.5499 15.1418 22 12 22C8.85817 22 6.05429 20.5499 4.22263 18.2864L4 18.0113V11.3333ZM6 12.5V17.2917C7.46721 18.954 9.61112 20 12 20C14.3889 20 16.5328 18.954 18 17.2917V12.5L12 16L6 12.5ZM3.96927 9L12 13.6846L20.0307 9L12 4.31541L3.96927 9Z"
-              ></path>
-            </svg>
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="currentColor"
+              >
+                <path
+                  d="M4 11.3333L0 9L12 2L24 9V17.5H22V10.1667L20 11.3333V18.0113L19.7774 18.2864C17.9457 20.5499 15.1418 22 12 22C8.85817 22 6.05429 20.5499 4.22263 18.2864L4 18.0113V11.3333ZM6 12.5V17.2917C7.46721 18.954 9.61112 20 12 20C14.3889 20 16.5328 18.954 18 17.2917V12.5L12 16L6 12.5ZM3.96927 9L12 13.6846L20.0307 9L12 4.31541L3.96927 9Z"
+                ></path>
+              </svg>
             </h2>
             <p class="info-estudios">
               Soy Tecnólogo en Desarrollo de Software, graduado del Instituto
@@ -88,14 +93,14 @@
             <h2 class="job-title">
               Experiencia Laboral
               <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-              fill="currentColor"
-            >
-              <path
-                d="M7 5V2C7 1.44772 7.44772 1 8 1H16C16.5523 1 17 1.44772 17 2V5H21C21.5523 5 22 5.44772 22 6V20C22 20.5523 21.5523 21 21 21H3C2.44772 21 2 20.5523 2 20V6C2 5.44772 2.44772 5 3 5H7ZM9 13H4V19H20V13H15V16H9V13ZM20 7H4V11H9V9H15V11H20V7ZM11 11V14H13V11H11ZM9 3V5H15V3H9Z"
-              ></path>
-            </svg>
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="currentColor"
+              >
+                <path
+                  d="M7 5V2C7 1.44772 7.44772 1 8 1H16C16.5523 1 17 1.44772 17 2V5H21C21.5523 5 22 5.44772 22 6V20C22 20.5523 21.5523 21 21 21H3C2.44772 21 2 20.5523 2 20V6C2 5.44772 2.44772 5 3 5H7ZM9 13H4V19H20V13H15V16H9V13ZM20 7H4V11H9V9H15V11H20V7ZM11 11V14H13V11H11ZM9 3V5H15V3H9Z"
+                ></path>
+              </svg>
             </h2>
 
             <h3 class="title-practicante">
@@ -132,32 +137,34 @@
               Octubre 2022 - Mayo 2023 Como Trainee.
             </h3>
             <p class="info-trainee">
-              Después de destacarme en mi desempeño, fui contratado como Trainee,
-              desempeñando funciones tanto de Analista de Datos como de
+              Después de destacarme en mi desempeño, fui contratado como
+              Trainee, desempeñando funciones tanto de Analista de Datos como de
               desarrollador en Power Platform. Durante este tiempo, utilicé
-              herramientas como Power BI, bases de datos como MySQL y SQL Server,
-              Python con énfasis en Pandas, Data Azure Factory, y trabajé en el
-              entorno de Power Platform, incluyendo Power Automate y Power Apps.
+              herramientas como Power BI, bases de datos como MySQL y SQL
+              Server, Python con énfasis en Pandas, Data Azure Factory, y
+              trabajé en el entorno de Power Platform, incluyendo Power Automate
+              y Power Apps.
             </p>
-
           </div>
         </div>
 
-                      <!-- CURSOS -->
+        <!-- CURSOS -->
 
-        <div class="courses">  
-          <h2 class="courses-title"> 
-            Mis Cursos </h2>
+        <div class="courses">
+          <h2 class="courses-title">Mis Cursos</h2>
 
-            <div class="img-curso1">
-              <a href="https://www.hackerrank.com/certificates/06b1407b0fff" target="_blank">
-                <img src="img/CertificadoSQLBasic.png" alt="CertificadoSQLBasic"> 
-              </a>
-            </div>
-            
+          <div class="img-curso1">
+            <a
+              href="https://www.hackerrank.com/certificates/06b1407b0fff"
+              target="_blank"
+            >
+              <img
+                src="img/CertificadoSQLBasic.png"
+                alt="CertificadoSQLBasic"
+              />
+            </a>
+          </div>
         </div>
-
-
       </section>
     </main>
 
