Co-authored-by: daezen <me@daezen.co>

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <a href="projects.html">Proyectos</a>
         </li>
         <li>
-          <a href="interests.html">Intereses</a>
+          <a href="about_me.html">Sobre mi</a>
         </li>
       </ul>
     </nav>
