--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="img/king.svg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
     <title>Portafolio</title>
@@ -47,7 +48,7 @@
         </li>
       </ul>
     </nav>
-    <header class="header">
+    <header class="projects-title">
         <h1>MIS PROYECTOS</h1>
     </header>
     <main class="projects-main">
@@ -72,12 +73,9 @@
               </div>
               <div class="infos">
                 <span class="name"> Weather App</span>
-                <span class="lorem"lore>Aca va una descripcion</span>
+                <span class="lorem"lore>Accede al pronóstico meteorológico detallado</span>
 
                 <a href="https://amaujmg.github.io/WEATHER-APP/" target="_blank" class="btn-details"> Ver Proyecto</a>
-                <div class="actions">
-
-                </div>
               </div>
             </div>
           </label>
@@ -95,9 +93,6 @@
                 <span class="lorem"lore>Aca va una descripcion</span>
 
                 <a href="https://amaujmg.github.io/WEATHER-APP/" target="_blank" class="btn-details"> Ver Proyecto</a>
-                <div class="actions">
-
-                </div>
               </div>
             </div>
           </label>
@@ -115,10 +110,6 @@
                 <span class="lorem"lore>Aca va una descripcion</span>
 
                 <a href="https://amaujmg.github.io/WEATHER-APP/" target="_blank" class="btn-details"> Ver Proyecto</a>
-                <div class="actions">
-
-
-                </div>
               </div>
             </div>
           </label>
@@ -135,9 +126,6 @@
                 <span class="lorem"lore>Aca va una descripcion</span>
 
                 <a href="https://amaujmg.github.io/WEATHER-APP/" target="_blank" class="btn-details"> Ver Proyecto</a>
-                <div class="actions">
-
-                </div>
               </div>
             </div>
           </label>
@@ -154,10 +142,6 @@
                 <span class="lorem"lore>Aca va una descripcion</span>
 
                 <a href="https://amaujmg.github.io/WEATHER-APP/" target="_blank" class="btn-details"> Ver Proyecto</a>
-                <div class="actions">
-
-
-                </div>
               </div>
             </div>
           </label>
