delete ver projects repeat

--- a/projects.html
+++ b/projects.html
@@ -89,10 +89,10 @@
     
               </div>
               <div class="infos">
-                <span class="name"> App 2</span>
+                <span class="name"> App </span>
                 <span class="lorem"lore>Aca va una descripcion</span>
 
-                <a href="https://amaujmg.github.io/WEATHER-APP/" target="_blank" class="btn-details"> Ver Proyecto</a>
+                <a href="" target="_blank" class="btn-details"> Ver Proyecto</a>
               </div>
             </div>
           </label>
@@ -106,10 +106,10 @@
 
               </div>
               <div class="infos">
-                <span class="name"> App 3</span>
+                <span class="name"> App </span>
                 <span class="lorem"lore>Aca va una descripcion</span>
 
-                <a href="https://amaujmg.github.io/WEATHER-APP/" target="_blank" class="btn-details"> Ver Proyecto</a>
+                <a href="" target="_blank" class="btn-details"> Ver Proyecto</a>
               </div>
             </div>
           </label>
@@ -122,10 +122,10 @@
                 <img src="img/" alt="imagen proyecto 4">
               </div>
               <div class="infos">
-                <span class="name"> App 4</span>
+                <span class="name"> App </span>
                 <span class="lorem"lore>Aca va una descripcion</span>
 
-                <a href="https://amaujmg.github.io/WEATHER-APP/" target="_blank" class="btn-details"> Ver Proyecto</a>
+                <a href="" target="_blank" class="btn-details"> Ver Proyecto</a>
               </div>
             </div>
           </label>
@@ -138,10 +138,10 @@
                 <img src="img/" alt="imagen proyecto 5">
               </div>
               <div class="infos">
-                <span class="name"> App 5</span>
+                <span class="name"> App </span>
                 <span class="lorem"lore>Aca va una descripcion</span>
 
-                <a href="https://amaujmg.github.io/WEATHER-APP/" target="_blank" class="btn-details"> Ver Proyecto</a>
+                <a href="" target="_blank" class="btn-details"> Ver Proyecto</a>
               </div>
             </div>
           </label>
