availble to work

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="img/king.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/king.svg" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
     <title>Portafolio</title>
@@ -16,7 +16,6 @@
   </head>
 
   <body>
-    
     <!-- background -->
     <div class="area-index">
       <ul class="circles">
@@ -32,7 +31,7 @@
         <li></li>
       </ul>
     </div>
-    
+
     <nav>
       <a href="index.html"
         ><svg
@@ -65,7 +64,7 @@
         </div>
 
         <p class="name-title__desc">
-          Soy tu desarrollador y analista de confianza. Aquí podrás encontrar
+          Soy tu <b>Desarrollador</b> y <b>Analista de datos</b> de confianza. Aquí podrás encontrar
           ejemplos de mi trabajo en el mundo del desarrollo. ¡Explora y siéntete
           libre de contactarme para colaborar en proyectos futuros! Estoy
           comprometido a mejorar continuamente y ofrecerte soluciones de alta
@@ -73,18 +72,21 @@
           juntos pronto!
         </p>
 
-        <a class="about-me" href="about_me.html">
-          Ver más sobre mi
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-          >
-            <path
-              d="M19.1642 12L12.9571 5.79291L11.5429 7.20712L16.3358 12L11.5429 16.7929L12.9571 18.2071L19.1642 12ZM13.5143 12L7.30722 5.79291L5.89301 7.20712L10.6859 12L5.89301 16.7929L7.30722 18.2071L13.5143 12Z"
-            ></path>
-          </svg>
-        </a>
+        <div class="about-work">
+          <a class="about-me-btn" href="about_me.html">
+            Ver más sobre mi
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+            >
+              <path
+                d="M19.1642 12L12.9571 5.79291L11.5429 7.20712L16.3358 12L11.5429 16.7929L12.9571 18.2071L19.1642 12ZM13.5143 12L7.30722 5.79291L5.89301 7.20712L10.6859 12L5.89301 16.7929L7.30722 18.2071L13.5143 12Z"
+              ></path>
+            </svg>
+          </a>
+          <div class="available-work" href="">Disponible para trabajar</div>
+        </div>
       </section>
     </main>
 
